--- a/templates/live/product_videos/product_videos_show.html
+++ b/templates/live/product_videos/product_videos_show.html
@@ -120,9 +120,7 @@
           
           <div class="span12">
             <div class="pull-right sharebuttonDiv"> 
-                  <a href="#sharingSettingsModal" class="btn blue jfk-button jfk-button-action" data-toggle="modal">
-                    <i class="icon-lock"></i> {{ _("Share") }}
-                  </a>
+                  <span id="hangout-on-air"></span>
                         
                         
                      
