--- a/templates/live/live_show_page.html
+++ b/templates/live/live_show_page.html
@@ -8,7 +8,7 @@
         <div class="container">
             <div class="span8">
                 <h1><a href="/#//live/shows" data-toggle="tooltip" data-placement="bottom" title="Back to Shows">
-            <img onload="this.__gwtLastUnhandledEvent=&quot;load&quot;;" src="https://admin.google.com/a/cpanel/gwt/cpanelnew/resources/clear.cache.gif" style="width: 21px; height: 21px; background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABUAAAAVCAYAAACpF6WWAAAAP0lEQVR42mNgGAXDApRT28AGIP5PCwP/08LA/9QKw/9kYLyggxaGYjMYHyApiBpoYSixSYqsyGwYzf+jgDQAAJylMNOnx10yAAAAAElFTkSuQmCC); background-position: 0px 0px; background-repeat: no-repeat no-repeat;" border="0" class="gwt-Image GI4HA0EPK cbarOpacity" aria-hidden="false"></a>     <a href="#" >Companies</a> > <a href="/live/companies/{{organization_id}}">{{show.organization_name}}</a> > {{show.name}} </h1>
+            <img onload="this.__gwtLastUnhandledEvent=&quot;load&quot;;" src="https://admin.google.com/a/cpanel/gwt/cpanelnew/resources/clear.cache.gif" style="width: 21px; height: 21px; background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABUAAAAVCAYAAACpF6WWAAAAP0lEQVR42mNgGAXDApRT28AGIP5PCwP/08LA/9QKw/9kYLyggxaGYjMYHyApiBpoYSixSYqsyGwYzf+jgDQAAJylMNOnx10yAAAAAElFTkSuQmCC); background-position: 0px 0px; background-repeat: no-repeat no-repeat;" border="0" class="gwt-Image GI4HA0EPK cbarOpacity" aria-hidden="false"></a>     <a href="#" >Companies</a> > <a href="/live/companies/{{organization_id}}">{{companyprofile.name}}</a> > {{show.name}} </h1>
             </div>
             <div class="span4">
                 <div class="pull-right get-in">
@@ -18,7 +18,7 @@
     data-calltoactionlabel="DISCOVER"
     data-calltoactionurl="http://gcdc2013-iogrow.appspot.com/live/shows/{{show.id}}"
     data-cookiepolicy="single_host_origin"
-    data-prefilltext="Come Discover this show at #ioGrow :)">
+    data-prefilltext="Come Discover this show at {{companyprofile.name}} :)">
      <i class="icon-share"></i>
   Tell your friends
 </button>
