--- a/templates/live/shows/show.html
+++ b/templates/live/shows/show.html
@@ -607,7 +607,7 @@
                              <div  class="span4 responsive" ng-repeat="attachment in documents" data-tablet="span6" data-desktop="span4">
                                 <div class="dashboard-stat cards-med">
                                   
-                                  <div class="details">
+                                  <div class="details" >
                                     <a href="/#/documents/show/<%= attachment.id %>"><h3 class="relatedcardOppTitle">
                                      <%=attachment.title%>
                                     </h3></a>
@@ -616,6 +616,15 @@
                                     
                                     </div>
                                   </div>
+                            <!--div ng-show="blankStatedocument" class="span12 responsive" data-tablet="span6" data-desktop="span12">
+                                  <div class="dashboard-stat cards">
+                                  <div class="blank_slate_arrow"></div>
+                              <div class="blank_slate_body">
+                                   <img src="/static/img/customer-feedback.jpg" width="300">
+                                 <p class="lead">{{ _('Feedbacks pages  let you receive a feedback from leads or customers ') }}</p>
+                              </div>
+                              </div>
+                            </div--> 
                                                  
                                 </div>
                               </div>
