Sorting and filtering on Product videos and customer stories #67 #70

--- a/templates/live/live_base.html
+++ b/templates/live/live_base.html
@@ -183,13 +183,13 @@
                     <ul class="social-footer">
                         <li><a href="https://www.facebook.com/iogrow" target="new"><i class="icon-facebook"></i></a></li>
                         <li><a href="https://plus.google.com/110820504821255547625/posts" target="new"><i class="icon-google-plus" ></i></a></li>
-                        <li><a href="#"><i class="icon-dribbble"></i></a></li>
+                        <!--li><a href="#"><i class="icon-dribbble"></i></a></li-->
                         <li><a href="#"><i class="icon-linkedin"></i></a></li>
                         <li><a href="#"><i class="icon-twitter"></i></a></li>
                         <li><a href="#"><i class="icon-skype"></i></a></li>
                         <li><a href="#"><i class="icon-github"></i></a></li>
                         <li><a href="#"><i class="icon-youtube"></i></a></li>
-                        <li><a href="#"><i class="icon-dropbox"></i></a></li>
+                        <!--li><a href="#"><i class="icon-dropbox"></i></a></li-->
                     </ul>                
                 </div>
             </div>
