Missed div on company page (i/oGrow live) #72

--- a/templates/live/live_company_page.html
+++ b/templates/live/live_company_page.html
@@ -196,7 +196,7 @@
                           
                         </div>
                       </div>
-                      <div class="tab-pane row-fluid fade in active" id="tab-3">
+                      <div class="tab-pane row-fluid fade" id="tab-3">
                                   <h2>Products <a href="#"><small></small></a></h2>
                                   {%if productvideo%}
                                   <div class="filter-v1 margin-bottom-40">
@@ -269,8 +269,8 @@
                                   </div-->
                                   
                             </div>
-                            <div class="tab-pane row-fluid fade in active" id="tab-4">
-                                  <h2>Products <a href="#"><small></small></a></h2>
+                            <div class="tab-pane row-fluid fade" id="tab-4">
+                                  <h2>Customer Stories <a href="#"><small></small></a></h2>
                                   <div class="filter-v1 margin-bottom-40">
                               
                                     <ul class="grid-v1 thumbnails">
@@ -288,7 +288,7 @@
                                   </div> 
                               </div>
                            
-                            <div class="tab-pane row-fluid fade in active" id="tab-5">
+                            <div class="tab-pane row-fluid fade" id="tab-5">
                                   <form action="#" class="horizontal-form margin-bottom-40">
                                   <div class="control-group">
                                       <label class="control-label">Subject</label>
