retrieve web site

--- a/templates/live/live_company_page.html
+++ b/templates/live/live_company_page.html
@@ -52,7 +52,7 @@
                                        
                                           
                                              {%for upcoming_show in upcoming_shows%}
-                                      <li class="span3 mix category_1"><a href="/live/shows/{{upcoming_show.id}}" target="new">
+                                      <li class="span3 mix category_1"><a href="/live/shows/{{upcoming_show.id}}">
                                       {% if upcoming_show.youtube_url %}
                                             <img class="video-thumbnail" src="http://img.youtube.com/vi/{{upcoming_show.youtube_url}}/0.jpg">
 
