Documents blank state

--- a/templates/accounts/show.html
+++ b/templates/accounts/show.html
@@ -593,19 +593,17 @@
                                   </a>                 
                                 </div>
                               </div>
-                              <div ng-show="blankStateopportunity" class="span12 responsive" data-tablet="span6" data-desktop="span12">
-                <div class="dashboard-stat cards">
+                        <div ng-show="blankStateopportunity" class="span12 responsive" data-tablet="span6" data-desktop="span12">
+                         <div class="dashboard-stat cards">
                   
                   
-                  <div class="blank_slate_arrow"></div>
-                  <div class="blank_slate_body">
-                      <img src="/static/img/opportunities_blank.png">
-                      <p class="lead">Know which proposals/bids are pending, which you’ve won, and which you’ve lost. Enter notes about the opportunities, attach proposals or contracts to the opportunities, and keep a log of any changes.</p>
-                  </div>
-               
-                                  
-                </div>
-              </div>
+                              <div class="blank_slate_arrow"></div>
+                            <div class="blank_slate_body">
+                                  <img src="/static/img/opportunities_blank.png">
+                                    <p class="lead">Know which proposals/bids are pending, which you’ve won, and which you’ve lost. Enter notes about the opportunities, attach proposals or contracts to the opportunities, and keep a log of any changes.</p>
+                             </div>                               
+                           </div>
+                         </div>
                               </div>
                               
                             </div>
@@ -839,6 +837,15 @@
                                                  
                                 </div>
                               </div>
+                        <div ng-show="blankStatdocuments" class="span12 responsive" data-tablet="span6" data-desktop="span12">
+                           <div class="dashboard-stat cards">
+                               <div class="blank_slate_arrow"></div>
+                               <div class="blank_slate_body">
+                                  <img src="/static/img/documents_blanks.png">
+                                    <p class="lead">Manage easily your documments using Google drive</p>
+                               </div>                               
+                           </div>
+                          </div>
 
                               </div>
                             </div>
