--- a/templates/live/shows/show.html
+++ b/templates/live/shows/show.html
@@ -615,18 +615,18 @@
                                     
                                     </div>
                                   </div>
-                            <!--div ng-show="blankStatedocument" class="span12 responsive" data-tablet="span6" data-desktop="span12">
-                                  <div class="dashboard-stat cards">
-                                  <div class="blank_slate_arrow"></div>
-                              <div class="blank_slate_body">
-                                   <img src="/static/img/customer-feedback.jpg" width="300">
-                                 <p class="lead">{{ _('Feedbacks pages  let you receive a feedback from leads or customers ') }}</p>
-                              </div>
-                              </div>
-                            </div--> 
-                                                 
+                                                                         
                                 </div>
                               </div>
+                          <div ng-show="blankStatdocuments" class="span12 responsive" data-tablet="span6" data-desktop="span12">
+                             <div class="dashboard-stat cards">
+                               <div class="blank_slate_arrow"></div>
+                               <div class="blank_slate_body">
+                                  <img src="/static/img/documents_blanks.png">
+                                    <p class="lead">Manage easily your documments using Google drive</p>
+                               </div>                               
+                           </div>
+                          </div>
 
                               </div>
                             </div>
