--- a/templates/live/product_videos/product_videos_show.html
+++ b/templates/live/product_videos/product_videos_show.html
@@ -618,6 +618,15 @@
                                                  
                                 </div>
                               </div>
+                               <div ng-show="blankStatdocuments" class="span12 responsive" data-tablet="span6" data-desktop="span12">
+                             <div class="dashboard-stat cards">
+                               <div class="blank_slate_arrow"></div>
+                               <div class="blank_slate_body">
+                                  <img src="/static/img/documents_blanks.png">
+                                    <p class="lead">Manage easily your documments using Google drive</p>
+                               </div>                               
+                           </div>
+                          </div>
 
                               </div>
                             </div>
