First page on i/oGrow live, All upcoming Shows page, All Recently Shows page

--- a/templates/live/feedbacks/feedbacks_list.html
+++ b/templates/live/feedbacks/feedbacks_list.html
@@ -213,9 +213,14 @@
                     <a href="/#/live/feedbacks/feedback/<%= feedback.id %>"><h3 class="relatedcardOppTitle">
                                     <%= feedback.name%>
                                     </h3></a>
-                    <div class="desc">                           
+                                   
+                    <div class="desc">
                       
-                    <a  class="desc" href="/#/accounts/industry/<%=account.industry%>"> </a> 
+                      <span class="contact-title" >(<%= feedback.status%> ,  </span>  
+                      <span class="contact-title" >from <%= feedback.source%>  )</span>
+                     
+                     
+                 
                     </div>
                   </div>
                                   
