--- a/templates/live/live_base.html
+++ b/templates/live/live_base.html
@@ -45,7 +45,7 @@
             <div class="navbar">
                 <div class="navbar-inner">
                     <!-- BEGIN LOGO (you can use logo image instead of text)-->
-                    <a class="brand logo-v1" href="index.html">
+                    <a class="brand logo-v1" href="/welcome/">
                         <img src="/static/frontend/img/iogrow_gool.png" id="logoimg" alt="" width="130">
                     </a>
                     <!-- END LOGO -->
@@ -120,7 +120,7 @@
           <!-- END TODO DROPDOWN -->               
           <!-- BEGIN USER LOGIN DROPDOWN -->
           <li>
-            <a href="#" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
+            <a href="/live/" >
             
             
             <span class="username">Shows</span>
@@ -185,7 +185,7 @@
                         <li><a href="https://plus.google.com/110820504821255547625/posts" target="new"><i class="icon-google-plus" ></i></a></li>
                         <!--li><a href="#"><i class="icon-dribbble"></i></a></li-->
                         <li><a href="#"><i class="icon-linkedin"></i></a></li>
-                        <li><a href="#"><i class="icon-twitter"></i></a></li>
+                        <li><a href="https://twitter.com/ioGrow"><i class="icon-twitter"></i></a></li>
                         <li><a href="#"><i class="icon-skype"></i></a></li>
                         <li><a href="#"><i class="icon-github"></i></a></li>
                         <li><a href="#"><i class="icon-youtube"></i></a></li>
