--- a/templates/live/shows/show.html
+++ b/templates/live/shows/show.html
@@ -137,7 +137,7 @@
               <span class="page-meta"><a href="#" ng-click="edityoutubeurl()" data-toggle="modal" ><img src="/static/img/youtube.png" /><strong>Add/Edit youtube-url </strong></a></span>
               </br>
               
-              <span class="page-meta"><strong>The show page on i/oGrow Live:</strong> <a href="/live/shows/<%=show.id%>">preview</a> </span>
+              <span class="page-meta"><strong>The show page on i/oGrow Live:</strong> <a href="/live/shows/<%=show.id%>/">preview</a> </span>
               </br>
               <span class="page-meta"><strong>Publish this show on i/oGrow Live: </strong> <input type="checkbox" ng-model="show.is_published" checked class="toggle"  ng-click="saveshowispublished(show)" />  </span>
               
@@ -348,9 +348,10 @@
                     <a href="/#/live/feedbacks/feedback/<%= feedback.id %>"><h3 class="relatedcardOppTitle">
                                     <%= feedback.name%>
                                     </h3></a>
-                    <div class="desc">                           
+                    <div class="desc">
                       
-                    <a  class="desc" href="/#/accounts/industry/<%=account.industry%>"> </a> 
+                      <span class="contact-title" >(<%= feedback.status%> ,  </span>  
+                      <span class="contact-title" >from <%= feedback.source%>  )</span>                 
                     </div>
                      </div>
                                   
