Introducing Google Maps on company_profile

--- a/templates/live/company_profile/comp_profile_show.html
+++ b/templates/live/company_profile/comp_profile_show.html
@@ -52,7 +52,7 @@
            <div class="row-fluid">
                           <div class="span6">
                             
-                                <div class="news-blocks blank-card blank-card-yellow">
+                                <div class="news-blocks blank-card blank-card-blue">
                                 <h3>Company Profile Information</h3>
                                 <div class="news-block-tags">
                                   <strong>Phone</strong>
@@ -135,6 +135,10 @@
                                   
                                 </div>
                                 <p><%=companyprof.introduction%></p>                         
+                              </div>
+                              <div class="news-blocks blank-card blank-card-yellow">
+                                <h3>Google Maps</h3>
+                                <div id="map_canvas" style="width:100%;height:300px;"></div>                         
                               </div>
                             
                           </div>
