--- a/templates/live/live_base.html
+++ b/templates/live/live_base.html
@@ -142,7 +142,7 @@
           <!-- END TODO DROPDOWN -->               
           <!-- BEGIN USER LOGIN DROPDOWN -->
           <li>
-            <a href="#" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
+            <a href="/live/companies">
             
             
             <span class="username">Companies</span>
@@ -242,7 +242,10 @@
     <script src="/static/frontend/plugins/respond.min.js"></script>  
     <![endif]-->   
     <!-- END CORE PLUGINS -->
-    <script src="/static/frontend/scripts/app.js"></script>      
+    <script src="/static/frontend/scripts/app.js"></script>  
+    <script src="http://maps.google.com/maps/api/js?sensor=true" type="text/javascript"></script>
+    <script src="/static/app/scripts/vendor/jquery.ui.map.min.js"></script> 
+    
     <script>
         jQuery(document).ready(function() {    
            App.init();
