--- a/templates/live/shows/show.html
+++ b/templates/live/shows/show.html
@@ -137,7 +137,7 @@
               <span class="page-meta"><a href="#" ng-click="edityoutubeurl()" data-toggle="modal" ><img src="/static/img/youtube.png" /><strong>Add/Edit youtube-url </strong></a></span>
               </br>
               
-              <span class="page-meta"><strong>The show page on i/oGrow Live:</strong> <a href="/live/shows/<%=show.id%>">preview</a> </span>
+              <span class="page-meta"><strong>The show page on i/oGrow Live:</strong> <a href="/live/shows/<%=show.id%>/">preview</a> </span>
               </br>
               <span class="page-meta"><strong>Publish this show on i/oGrow Live: </strong> <input type="checkbox" ng-model="show.is_published" checked class="toggle"  ng-click="saveshowispublished(show)" />  </span>
               
