--- a/templates/live/welcome.html
+++ b/templates/live/welcome.html
@@ -47,7 +47,7 @@ An audience returns often to see what you have to say.
 
             <!-- BEGIN CAROUSEL -->            
             <div class="span5 front-carousel">
-                <img src="http://www.google.com/+/business/img/connect/hangout.png"/>                
+                <img src="https://developers.google.com/maps/images/gdl-banner.png"/>                
             </div>
             <!-- END CAROUSEL -->             
         </div>
