--- a/templates/base.html
+++ b/templates/base.html
@@ -374,6 +374,9 @@
   
   <script src="static/app/scripts/vendor/wysihtml5-0.3.0.min.js" ></script>
   <script src="static/app/scripts/vendor/bootstrap-wysihtml5.js" ></script>
+  <script src="http://maps.google.com/maps/api/js?sensor=true" type="text/javascript"></script>
+  <script src="/static/app/scripts/vendor/jquery.ui.map.min.js"></script> 
+  <script type="text/javascript" src="/static/app/scripts/vendor/jquery.ui.map.services.js"></script>
 
   <!-- END CORE PLUGINS -->
   
