Retrive google map on Company profile

--- a/templates/live/live_show_index.html
+++ b/templates/live/live_show_index.html
@@ -29,7 +29,7 @@
 
     <div class="container min-hight">
         <!-- BEGIN FILTER -->     
-        <h2>Check out our upcoming shows <a href="/live/Allupcomings/"><small>(View all)</small></a></h2>
+        <h2>Check out our upcoming shows <a href="/live/allupcomings/"><small>(View all)</small></a></h2>
         
         <ul class="grid-v1 thumbnails">
                 {%for upcoming in upcoming_shows%}
@@ -44,7 +44,7 @@
                 {%endfor%}
                 
         </ul>     
-        <h2>Recently aired <a href="/live/Allrecents/"><small>(View all)</small></a></h2>
+        <h2>Recently aired <a href="/live/allrecents/"><small>(View all)</small></a></h2>
           
         <div class="filter-v1 margin-bottom-40">
             
