--- a/templates/live/live_all_upcomings_show.html
+++ b/templates/live/live_all_upcomings_show.html
@@ -15,7 +15,7 @@
     data-clientid="987765099891.apps.googleusercontent.com"
     data-contenturl="http://gcdc2013-iogrow.appspot.com/live/"
     data-calltoactionlabel="DISCOVER"
-    data-calltoactionurl="http://gcdc2013-iogrow.appspot.com/live/Allupcomings/"
+    data-calltoactionurl="http://gcdc2013-iogrow.appspot.com/live/allupcomings/"
     data-cookiepolicy="single_host_origin"
     data-prefilltext="Come Discover  i/oGrow Live :)">
      <i class="icon-share"></i>
