--- a/templates/live/live_base.html
+++ b/templates/live/live_base.html
@@ -96,7 +96,7 @@
         <ul class="nav pull-right">
           
           <li class="dropdown user">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
+            <a href="/sign-in" >
             <img alt="" src="/static/frontend/img/glyphicons_156_show_thumbnails.png" width="20" />
             
             <span class="username">Grow</span>
