--- a/templates/live/live_company_page.html
+++ b/templates/live/live_company_page.html
@@ -7,7 +7,7 @@
         <div class="container">
             <div class="span8">
                 <h1><a href="/#/accounts/p/1" data-toggle="tooltip" data-placement="bottom" title="Back to Accounts">
-            <img onload="this.__gwtLastUnhandledEvent=&quot;load&quot;;" src="https://admin.google.com/a/cpanel/gwt/cpanelnew/resources/clear.cache.gif" style="width: 21px; height: 21px; background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABUAAAAVCAYAAACpF6WWAAAAP0lEQVR42mNgGAXDApRT28AGIP5PCwP/08LA/9QKw/9kYLyggxaGYjMYHyApiBpoYSixSYqsyGwYzf+jgDQAAJylMNOnx10yAAAAAElFTkSuQmCC); background-position: 0px 0px; background-repeat: no-repeat no-repeat;" border="0" class="gwt-Image GI4HA0EPK cbarOpacity" aria-hidden="false"></a>     <a href="#" >Companies</a> > <a >{{companyprofile.name}}</a> > Growing your business tips and techniques</h1>
+            <img onload="this.__gwtLastUnhandledEvent=&quot;load&quot;;" src="https://admin.google.com/a/cpanel/gwt/cpanelnew/resources/clear.cache.gif" style="width: 21px; height: 21px; background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABUAAAAVCAYAAACpF6WWAAAAP0lEQVR42mNgGAXDApRT28AGIP5PCwP/08LA/9QKw/9kYLyggxaGYjMYHyApiBpoYSixSYqsyGwYzf+jgDQAAJylMNOnx10yAAAAAElFTkSuQmCC); background-position: 0px 0px; background-repeat: no-repeat no-repeat;" border="0" class="gwt-Image GI4HA0EPK cbarOpacity" aria-hidden="false"></a>     <a href="/live/companies/" >Companies</a> > <a >{{companyprofile.name}}</a> > Growing your business tips and techniques</h1>
             </div>
             <div class="span4">
                 <div class="btn-group pull-right get-in">
@@ -126,7 +126,7 @@
                                 </div>
                                  <ul class="unstyled contact-infos">
                                    {%for addr in companyprofile.addresses%}
-                                    <li >{{addr.street}}, {{addr.city}} {{addr.state}}, {{addr.street}} {{addr.postal_code}}  </li>
+                                    <li >{{addr.street}}, {{addr.city}} ,  {{addr.postal_code}} {{addr.state}}  </li>
                                     {%endfor%}
                  
                                   </ul>
