Adding Call to Action Button start growing your company now

--- a/templates/live/welcome.html
+++ b/templates/live/welcome.html
@@ -41,6 +41,7 @@ Startups need to understand in details who are their customers, what are their p
 Another problem for startups and small companies is <strong>how to buy people’s attention.</strong> Big companies can spend a lots of money on advertising, but small companies can’t. So why don’t think about a new way:  <strong>Instead of trying to outspend, out-advertise, your competitors, try to build an audience.</strong> Speak, share information that’s valuable with people and you will form a whole different connection. They’ll trust you more. They’ll respect you more.<br>
 An audience returns often to see what you have to say. 
 </p>
+<center><a href="/sign-in" class="btn green call-to-action"> Start Growing your Company Now!</a></center>
                
             </div>
             <!-- END INFO BLOCK -->   
