--- a/static/frontend/css/style.css
+++ b/static/frontend/css/style.css
@@ -1419,3 +1419,12 @@ BXSlider
 #gConnect{
 	padding-top: 25px;
 }
+.call-to-action{
+	font-size: 16px;
+	margin-top: 20px;
+	padding-top: 15px;
+	height: 30px;
+	width: 50%;
+	text-align: center;
+	font-weight: bold;
+}
