My company link on iogrow platform replacing admin console

--- a/templates/base.html
+++ b/templates/base.html
@@ -132,17 +132,14 @@
           
           <!-- END TODO DROPDOWN -->               
           <!-- BEGIN USER LOGIN DROPDOWN -->
-          {% if admin_app %}
+    
           <li>
-            <a href="/apps/{{admin_app.id}}" >
-            
-            
-            Admin Console
-            
+            <a href="/live/companies/{{org_id}}/" target="new">
+            My company
             </a>
             
           </li>
-          {% endif %}
+          
           <!-- END USER LOGIN DROPDOWN -->
           <!-- END USER LOGIN DROPDOWN -->
         </ul>
@@ -239,12 +236,12 @@
 
 
 
-         //var ROOT = '/_ah/api';
+         var ROOT = '/_ah/api';
 
 
    
 
-    var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+    //var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
 
