--- a/templates/live/customer_stories/customer_stories_list.html
+++ b/templates/live/customer_stories/customer_stories_list.html
@@ -169,7 +169,7 @@
                   <div class="blank_slate_arrow"></div>
                   <div class="blank_slate_body">
                       <img src="/static/img/blankshow.png">
-                      <p class="lead">{{ _('Customer Stories pages  let you present your success story.') }}</p>
+                      <p class="lead">{{ _('Big companies can spend lot of money on advertising, but small companies can’t . So why not following a new way: Instead of trying to out-advertise your competitors, try to build your own audience. Show the world who are your happy customers, how did your products or services changed their life. Do live hangouts with your customers. The audience care often about what you have to say. ') }}</p>
                   </div>
                
                                   
