--- a/templates/live/product_videos/product_videos_list.html
+++ b/templates/live/product_videos/product_videos_list.html
@@ -170,7 +170,7 @@
                   <div class="blank_slate_arrow"></div>
                   <div class="blank_slate_body">
                       <img src="/static/img/blankshow.png">
-                      <p class="lead">{{ _('Product Videos pages  let you present your product.') }}</p>
+                      <p class="lead">{{ _('Big companies can spend lot of money on advertising, but small companies can’t . So why not following a new way: Instead of trying to out-advertise your competitors, try to build your own audience. Show the world what are the products and best ideas you are working on. You will gain feedbacks, suggestions, and trafic. The audience care often about what you have to say. ') }}</p>
                   </div>
                
                                   
