--- a/templates/live/shows/list_show.html
+++ b/templates/live/shows/list_show.html
@@ -173,7 +173,7 @@
                   <div class="blank_slate_arrow"></div>
                   <div class="blank_slate_body">
                       <img src="/static/img/blankshow.png">
-                      <p class="lead">{{ _('Shows pages  let you schedule your hangouts (classes), share your knowledge and be usefull.') }}</p>
+                      <p class="lead">{{ _('Big companies can spend lot of money on advertising, but small companies can’t . So why not following a new way: Instead of trying to out-advertise your competitors, try to build your own audience. Speak, share information that’s valuable with people and you will create a whole different connection. You will gain more trust and more respect. The audience care often about what you have to say. ') }}</p>
                   </div>
                
                                   
