--- a/templates/live/live_all_recents_show.html
+++ b/templates/live/live_all_recents_show.html
@@ -36,6 +36,7 @@
         <div class="filter-v1 margin-bottom-40">
             
             <ul class="grid-v1 thumbnails">
+              {% if recently_shows%}
                 {%for recent in recently_shows%}
                 <li class="span3 mix category_1">
                 
@@ -52,6 +53,22 @@
                                                           
                 </li>
                 {%endfor%}
+            {%else%}
+               <div class="span6 responsive" data-tablet="span6" data-desktop="span4">
+                <div class="dashboard-stat cards">
+                  
+                  
+                  <div class="blank_slate_arrow"></div>
+                  <div class="blank_slate_body">
+                      <img src="/static/img/blankshow.png" align="center">
+                      <p class="lead">{{ _('Big companies can spend lot of money on advertising, but small companies can’t . So why not following a new way: Instead of trying to out-advertise your competitors, try to build your own audience. Speak, share information that’s valuable with people and you will create a whole different connection. You will gain more trust and more respect. The audience care often about what you have to say') }}</p>
+                  </div>
+               
+                                  
+                </div>
+              </div>
+            {%endif%}
+                     
 
             </ul>
         </div>
