--- a/templates/live/live_all_upcomings_show.html
+++ b/templates/live/live_all_upcomings_show.html
@@ -33,6 +33,7 @@
         <h2>Check out our upcoming shows </h2>
         
         <ul class="grid-v1 thumbnails">
+                 {%if upcoming_shows%}
                 {%for upcoming in upcoming_shows%}
                 <li class="span3 mix category_1">
                 
@@ -43,6 +44,22 @@
                                                           
                 </li>
                 {%endfor%}
+                {%else%}
+                  <div class="span6 responsive" data-tablet="span6" data-desktop="span4">
+                <div class="dashboard-stat cards">
+                  
+                  
+                  <div class="blank_slate_arrow"></div>
+                  <div class="blank_slate_body">
+                      <img src="/static/img/blankshow.png" align="center">
+                      <p class="lead">{{ _('Big companies can spend lot of money on advertising, but small companies can’t . So why not following a new way: Instead of trying to out-advertise your competitors, try to build your own audience. Speak, share information that’s valuable with people and you will create a whole different connection. You will gain more trust and more respect. The audience care often about what you have to say') }}</p>
+                  </div>
+               
+                                  
+                </div>
+              </div>
+                {%endif%}
+
                 
         </ul>     
         
