--- a/templates/live/live_base.html
+++ b/templates/live/live_base.html
@@ -99,7 +99,7 @@
             <a href="/sign-in" >
             <img alt="" src="/static/frontend/img/glyphicons_156_show_thumbnails.png" width="20" />
             
-            <span class="username">Grow</span>
+            <span class="username">Platform</span>
             
             </a>
 
@@ -175,20 +175,16 @@
             <div class="row-fluid">
                 <div class="span8">
                     <p>
-                        <span class="margin-right-10">2013 © I/ogrow. ALL Rights Reserved.</span> 
+                        <span class="margin-right-10">2014 © ioGgrow. ALL Rights Reserved.</span> 
                         <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a>
                     </p>
                 </div>
                 <div class="span4">
                     <ul class="social-footer">
-                        <li><a href="https://www.facebook.com/iogrow" target="new"><i class="icon-facebook"></i></a></li>
                         <li><a href="https://plus.google.com/110820504821255547625/posts" target="new"><i class="icon-google-plus" ></i></a></li>
-                        <!--li><a href="#"><i class="icon-dribbble"></i></a></li-->
-                        <li><a href="#"><i class="icon-linkedin"></i></a></li>
+                        <li><a href="https://www.facebook.com/iogrow" target="new"><i class="icon-facebook"></i></a></li>
                         <li><a href="https://twitter.com/ioGrow"><i class="icon-twitter"></i></a></li>
-                        <li><a href="#"><i class="icon-skype"></i></a></li>
-                        <li><a href="#"><i class="icon-github"></i></a></li>
-                        <li><a href="#"><i class="icon-youtube"></i></a></li>
+                        
                         <!--li><a href="#"><i class="icon-dropbox"></i></a></li-->
                     </ul>                
                 </div>
@@ -204,8 +200,8 @@
       window.is_signed_in = false;
       window.authResult = undefined;
       var apisToLoad;
-      var ROOT = '/_ah/api';
-      //var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+      //var ROOT = '/_ah/api';
+      var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
       var callback = function() {
         if (--apisToLoad == 0) {
           apiLoaded();
