Page Shows (website) : view all only displayed on if upcoming show > 8 and recent<4

--- a/templates/live/live_all_recents_show.html
+++ b/templates/live/live_all_recents_show.html
@@ -15,7 +15,7 @@
     data-clientid="987765099891.apps.googleusercontent.com"
     data-contenturl="http://gcdc2013-iogrow.appspot.com/live/Allrecents/"
     data-calltoactionlabel="DISCOVER"
-    data-calltoactionurl="http://gcdc2013-iogrow.appspot.com/live/Allrecents/"
+    data-calltoactionurl="http://gcdc2013-iogrow.appspot.com/live/allrecents/"
     data-cookiepolicy="single_host_origin"
     data-prefilltext="Come Discover  i/oGrow Live :)">
      <i class="icon-share"></i>
