--- a/templates/live/live_show_page.html
+++ b/templates/live/live_show_page.html
@@ -14,9 +14,9 @@
                 <div class="pull-right get-in">
                       <button id="myBtn" class="btn green g-interactivepost"
     data-clientid="987765099891.apps.googleusercontent.com"
-    data-contenturl="http://gcdc2013-iogrow.appspot.com/live/shows/{{show.id}}"
+    data-contenturl="http://gcdc2013-iogrow.appspot.com/live/shows/{{show.id}}/"
     data-calltoactionlabel="DISCOVER"
-    data-calltoactionurl="http://gcdc2013-iogrow.appspot.com/live/shows/{{show.id}}"
+    data-calltoactionurl="http://gcdc2013-iogrow.appspot.com/live/shows/{{show.id}}/"
     data-cookiepolicy="single_host_origin"
     data-prefilltext="Come Discover this show at {{companyprofile.name}} :)">
      <i class="icon-share"></i>
