--- a/templates/live/maps.html
+++ b/templates/live/maps.html
@@ -12,9 +12,9 @@
             <div class="pull-right get-in">
                 <button id="myBtn" class="btn green g-interactivepost"
     data-clientid="987765099891.apps.googleusercontent.com"
-    data-contenturl="http://gcdc2013-iogrow.appspot.com/welcome"
+    data-contenturl="http://gcdc2013-iogrow.appspot.com/welcome/"
     data-calltoactionlabel="DISCOVER"
-    data-calltoactionurl="http://gcdc2013-iogrow.appspot.com/welcome"
+    data-calltoactionurl="http://gcdc2013-iogrow.appspot.com/welcome/"
     data-cookiepolicy="single_host_origin"
     data-prefilltext="#ioGrow is a platfrom that helps startups to #grow their business">
      <i class="icon-share"></i>
