--- a/templates/live/welcome.html
+++ b/templates/live/welcome.html
@@ -12,7 +12,7 @@
             <div class="pull-right get-in">
                 <button id="myBtn" class="btn green g-interactivepost"
     data-clientid="987765099891.apps.googleusercontent.com"
-    data-contenturl="http://gcdc2013-iogrow.appspot.com/welcome"
+    data-contenturl="http://gcdc2013-iogrow.appspot.com/welcome/"
     data-calltoactionlabel="DISCOVER"
     data-calltoactionurl="http://gcdc2013-iogrow.appspot.com/welcome/"
     data-cookiepolicy="single_host_origin"
